Fix dumperrorlog so it can run on other sites.  The ops errorlog database is only used for Utah's emulab.  In the process many other changes where made to dumperrorlog to fix bugs and make it more correct/robust.  I also avoided the need to explicitly lock any tables.

--- a/configure.in
+++ b/configure.in
@@ -102,6 +102,7 @@ AC_SUBST(optional_subdirs)
 # to appear in config.h.
 # 
 AC_SUBST(TBDBNAME)
+AC_SUBST(TBERRORLOGDBNAME)
 AC_SUBST(TBADMINGROUP)
 AC_SUBST(DELAYCAPACITY)
 AC_SUBST(IPBASE)
@@ -239,6 +240,7 @@ AC_SUBST(TBERRORSEMAIL_NOSLASH)
 #
 # Defaults for for above variables.
 # 
+TBERRORLOGDBNAME="errorlog"
 TBADMINGROUP="flux"
 CLIENT_ETCDIR="/etc/emulab"
 CLIENT_BINDIR="/usr/local/etc/emulab"
@@ -342,6 +344,7 @@ else
     AC_DEFINE_UNQUOTED(TBROOT, "$prefix")
 fi
 AC_DEFINE_UNQUOTED(TBDBNAME, "$TBDBNAME")
+AC_DEFINE_UNQUOTED(TBERRORLOGDBNAME, "$TBERRORLOGDBNAME")
 AC_DEFINE_UNQUOTED(TBADMINGROUP, "$TBADMINGROUP")
 AC_DEFINE_UNQUOTED(IPBASE, "$IPBASE")
 AC_DEFINE_UNQUOTED(JAILIPBASE, "$JAILIPBASE")
