--- a/tbsetup/node_reboot.in
+++ b/tbsetup/node_reboot.in
@@ -32,8 +32,8 @@ sub usage()
     exit(-1);
 }
 # The hidden -r option runs this in "realmode", ie don't send an event, but
-# really do the work instead.
-my $optlist     = "dfe:wrkacbps";
+# really do the work instead.  Hidden -W option specifies the waittime. 
+my $optlist     = "dfe:wrkacbpsW:";
 my $debug       = 0;
 my $silent      = 0;
 my $powercycle  = 0;
@@ -43,6 +43,7 @@ my $killmode    = 0;
 my $reconfig    = 0;
 my $rebootmode  = 0;
 my $prepare     = 0;
+my $waittime;
 
 #
 # Configure variables
@@ -124,6 +125,9 @@ if (defined($options{"r"})) {
 }
 if (defined($options{"c"})) {
     $reconfig = 1;
+}
+if (defined($options{"W"})) {
+    $waittime = $options{"W"};
 }
 
 if (defined($options{"a"})) {
@@ -248,6 +252,7 @@ $args{'realmode'}    = $realmode;
 $args{'killmode'}    = $killmode;
 $args{'reconfig'}    = $reconfig;
 $args{'prepare'}     = $prepare;
+$args{'waittime'}    = $waittime     if defined $waittime;
 $args{'nodelist'}    = [ @nodes ];
 
 exit(nodereboot(\%args, \%status));
