If a known user (based on stored cookies) is not logged in than redirect to the login page rather than printing a message with a link to the page.  Otherwise send a "403 Forbidden" to keep robots from indexing the page.  Also send appreciate HTTP responses on other precheck errors to keep a robot from indexing the page.  In order to do this the PAGEHEADER call needed to be moved to after CheckLoginOrDie and Required/OptionalPageArguments on many pages.  A warning will be printed if either CheckLoginOrDie or Required/OptionalPageArguments detects that PAGEHEADER was already called.
Also change the redirect in kb-show to be a permanent redirect (301)
rather than a temporary one (302) which is the default unless a status
code is given.

--- a/www/defs.php3.in
+++ b/www/defs.php3.in
@@ -258,9 +258,14 @@ function TBERROR ($message, $death, $xmp = 0) {
 }
 
 #
-# General user errors should print something warm and fuzzy
+# General user errors should print something warm and fuzzy.  If a
+# header is not already printed and the dealth paramater is true, then
+# assume the error is a precheck error and send an appropriate HTTP
+# response to prevent robots from indexing the page.  This currently
+# defaults to a "400 Bad Request", but that may change in the future.
 #
-function USERERROR($message, $death = 1) {
+function USERERROR($message, $death = 1, 
+	           $status_code = HTTP_400_BAD_REQUEST) {
     global $TBMAILADDR;
     global $session_interactive, $session_errorhandler;
 
@@ -286,7 +291,7 @@ function USERERROR($message, $death = 1) {
             </font>\n";
 
     if ($death) {
-	PAGEERROR($msg);
+	PAGEERROR($msg, $status_code);
     }
     else
         echo "$msg\n";
@@ -310,7 +315,7 @@ function PAGEARGERROR($msg = 0) {
     if ($msg) {
 	$default = "$default<br><br>$msg";
     }
-    USERERROR($default, 1);
+    USERERROR($default, 1, HTTP_400_BAD_REQUEST);
 }
 
 #
