Bug fix.  Check to make sure the pid/uid match in the result returned by $node->ReservedTableEntry().  Otherwise nfree will happy free nodes not in the given experiment.

--- a/db/nfree.in
+++ b/db/nfree.in
@@ -216,7 +216,7 @@ foreach my $node (@nodes) {
     # Check to make sure they have actually reserved the nodes, now that
     # the reserved table is locked.
     my $rowref = $node->ReservedTableEntry();
-    if (!defined($rowref)) {
+    unless (defined($rowref) && $rowref->{'pid'} eq $pid && $rowref->{'eid'} eq $eid) {
 	print STDERR "$node is not reserved by your experiment.\n";
 	$error++;
 	next;
