In Experiment::EditExp do not assume the batchmode parameter is false if it is not set, as it is likely the case that it was simply unchanged and thus not passed into EditExp.  This had the effect of always trying to disable Batch Mode when editing the experiment settings, which would often fail, and thus preventing the user from editing other settings.

--- a/db/Experiment.pm.in
+++ b/db/Experiment.pm.in
@@ -1031,11 +1031,8 @@ sub EditExp($$$$$$)
     # the swapped state. If the query fails, we know that the experiment
     # was in transition.
     #
-	
-    if (!exists($argref->{"batchmode"})) {
-	$argref->{"batchmode"} = 0;
-    }
-    if ($experiment->batchmode() != $argref->{"batchmode"}) {
+
+    if (exists($argref->{"batchmode"}) && $experiment->batchmode() != $argref->{"batchmode"}) {
 	my $success  = 0;
 
 	my $batchmode;
