--- a/www/cvsweb/cvsweb-ops.conf
+++ b/www/cvsweb/cvsweb-ops.conf
@@ -9,7 +9,7 @@
 #          based on work by Bill Fenner  <fenner@FreeBSD.org>
 #
 # $FreeBSD: projects/cvsweb/cvsweb.conf,v 1.36.2.3 2002/09/23 05:30:17 scop Exp $
-# $Id: cvsweb-ops.conf,v 1.1 2005-09-02 22:07:23 stoller Exp $
+# $Id: cvsweb-ops.conf,v 1.2 2008-12-04 01:32:22 ricci Exp $
 # $Idaemons: /home/cvs/cvsweb/cvsweb.conf,v 1.27 2001/08/01 09:48:39 knu Exp $
 #
 ###
@@ -234,11 +234,12 @@ EOT
     
 $license = <<EOT;
 <p>
-<b>Please remember that the Emulab
-<a href="http://www.emulab.net/doc/docwrapper.php3?docname=LICENSE.txt">
-<b>LICENSE</b></a> states that this source code is 1) for use only for
-research and education, 2) cannot be used for commercial purposes,
-and, 3) cannot be redistributed outside your research group.</b>
+<b>Note on licences:</b>
+Please note that licenses are not included directly in most source
+files: there is a placeholder that is replaced by an appropriate license
+in the process of making a release. If you have a need to distribute this
+code, please either distribute an official release or snapshot, or ask Utah
+for help in getting the proper licenses in it.
 </p>
 EOT
 
