Fix typo in usage message.

--- a/protogeni/scripts/remauthority.in
+++ b/protogeni/scripts/remauthority.in
@@ -14,7 +14,7 @@ use Getopt::Std;
 # 
 sub usage()
 {
-    print "Usage: addauthority [-c] <uuid>\n";
+    print "Usage: remauthority [-c] <uuid>\n";
     exit(1);
 }
 my $optlist    = "c";
