Committing some of the smaller changes from the code I'm working on.  These parts should be harmless and have little interaction with anything else.

--- a/protogeni/lib/GeniCredential.pm.in
+++ b/protogeni/lib/GeniCredential.pm.in
@@ -487,5 +487,18 @@ sub Store($)
     return 0;
 }
 
+sub HasPrivilege($$)
+{
+    my ( $self, $p ) = @_;
+
+    return 0
+	if( !defined( $self->{ 'capabilities' } ) );
+
+    return 1
+	if( defined( $self->{ 'capabilities' }->{ "*" } ) );
+
+    return defined( $self->{ 'capabilities' }->{ $p } );
+}
+
 # _Always_ make sure that this 1 is at the end of the file...
 1;
