--- a/db/emdbi.pm.in
+++ b/db/emdbi.pm.in
@@ -324,6 +324,8 @@ sub DBQuerySingleFatalN($$)
     my $query_result = DBQueryFatalN($dbnum, $query);
     DBFatal("DB Query \"$query\" didn't return any results") 
 	unless $query_result->numrows > 0;
+    DBFatal("DB Query \"$query\" returned more than one row")
+	unless $query_result->numrows == 1;
     my @row = $query_result->fetchrow_array();
     return wantarray ? @row : $row[0];
 }
