In addprojadminlist die if unable to add testbed-approval to mailing list.
However, when creating a new project, don't die if addprojadminlist
fails.  Instead send mail to testbed-ops so someone can fix it up
manually.

--- a/collab/mailman/addprojadminlist.in
+++ b/collab/mailman/addprojadminlist.in
@@ -164,6 +164,9 @@ if ($CONTROL ne $BOSSNODE) {
     
     system("echo $TBAPPROVAL | ".
 	   "$SSH -host $CONTROL $MMBINDIR/add_members -r - $proj-admin");
+    if ($?) {
+	fatal("Unable to add $TBAPPROVAL to $proj-admin");
+    }
 
     my $status = $?;
     TBScriptUnlock();
